# razermatter

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: bridge.rs  lib.rs  main.rs  mdns.rs  protocol.rs  razer.rs
src/bridge/: basic_info.rs  device_logic.rs  mod.rs  server.rs
src/hardware/: interface.rs  mod.rs  razer.rs
tests/: protocol_tests.rs
